--- a/prova-renan/src/app/Main/main.css
+++ b/prova-renan/src/app/Main/main.css
@@ -7,12 +7,86 @@
 }
 .fonte-padrao{
     font-family: 'Gotham HTF';
-    font-size: 100px;
-    
+    font-size: 80px;
 }
 .cor-branca{
     color: white;
 }
 .cor-cinza{
     color: #4c4b4c;
+}
+.position-fonte-tecnologia{
+    position: relative;
+    bottom: 100px;
+}
+.fonte-padrao-sobreposto{
+    font-family: 'Gotham HTF';
+    font-size: 200px;
+    font-weight: bold;
+    position: relative;
+    bottom: 430px;
+    opacity: 0.125;
+}
+#efeito-texto{
+    opacity: 0; /* Começa invisível */
+    transition: opacity 1s ease; /* Define a animação de opacidade */
+}
+#centro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    position: relative;
+    top: 0px; 
+}
+.posicao-texto{
+    position: relative;
+    top: 120px;
+}
+.position-texto-direta{
+    position: relative;
+    left: 50px;;
+}
+.index-tras{
+    z-index: 2;
+    position: relative;
+}
+.index-frente{
+    z-index: 1;
+    position: relative;
+}
+.position-tec{
+    position: relative;
+    top: -50px;
+}
+/*essa é a parte da animacao usando keyframes*/
+.opacidade{
+    opacity: 1;
+    transform: ;
+}
+@keyframes animacao {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.animacao {
+    animation: animacao 5s;
+}
+
+@keyframes animacao2 {
+    0% {
+        opacity: 0;
+        position: relative;
+        top: -20px;
+    }
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
+}
+.animacao2 {
+    animation: animacao2 1s;
 }
