--- a/prova-renan/src/app/Header/header.css
+++ b/prova-renan/src/app/Header/header.css
@@ -11,3 +11,14 @@
     top: 4%;
     left: 50%;
 }
+
+.navbar {
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
+    background-color: red; 
+    padding: 10px 0; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    transition: background-color 0.3s ease; 
+    z-index: 1;
+  }
