--- a/prova-renan/src/app/NavBar/navbar.css
+++ b/prova-renan/src/app/NavBar/navbar.css
@@ -7,10 +7,11 @@
     height: 2px;
     background-color: red;
     transition: width 0.3s ease-in-out;
+    width: 350px;
   }
   
   .nav.scrolled:before {
-    width: 100%;
+    width: 80%;
   }
 
   
@@ -23,7 +24,7 @@
     z-index: 2;
     height: 3px;
     min-height: 3px;
-    width: calc(100% - 1.5rem);
+    width: calc(80% - 1.5rem);
     background-color: #fff;
     padding: 0 1rem;
     box-shadow: 0 0.125rem 0.25rem 0 rgb(0 0 0 / 11%);
