--- a/prova-renan/src/app/globals.css
+++ b/prova-renan/src/app/globals.css
@@ -1,12 +1,16 @@
-/*
-CORES
+
+/*CORES
 #060606
 
 #b4acaf
 
 #4c4b4c
 
-#747474
+#747474*/
+
+*{
+  overflow-x: hidden;
+}
 
 
 @font-face {
@@ -63,4 +67,11 @@ CORES
   url('./gotham/gotham-htf-thin.woff') format('woff');
   font-weight: 200;
   font-style: normal;
+}
+
+@media (max-width: 600px) { 
+  body { font-size: 14px; background-color: red; } 
+  .container { flex-direction: column; } 
+  .sidebar { width: 100%; } 
+  .main-content { width: 100%; } 
 }
