--- a/prova-renan/src/app/Main/main.css
+++ b/prova-renan/src/app/Main/main.css
@@ -341,14 +341,14 @@ hr {
 
   .animation-container2 {
     overflow: hidden;
-    height: 300px; /* Adjust height as needed */
+    height: 300px;
   }
   
   .marquee-text3 {
     display: flex;
-    flex-direction: column; /* Arrange content vertically */
-    transform: translateY(0); /* Initial position: top */
-    transition: transform 0.5s ease; /* Define transition properties */
+    flex-direction: column; 
+    transform: translateY(0); 
+    transition: transform 0.5s ease; 
   }
   
   .marquee-text3 p {
